The state field in the checkout form is not correctly aligned
* removed margin property

--- a/ui.apps/src/main/content/jcr_root/apps/weretail/components/content/checkoutform/clientlibs/less/checkout.less
+++ b/ui.apps/src/main/content/jcr_root/apps/weretail/components/content/checkoutform/clientlibs/less/checkout.less
@@ -89,7 +89,6 @@
 	}
 
 	select[name="shipping.state"], select[name="billing.state"] {
-		margin-top: 27px;
 		display: none;
 	}
 
